--- a/examples/rosetta/frameworks/montage/package.json
+++ b/examples/rosetta/frameworks/montage/package.json
@@ -2,6 +2,6 @@
     "name": "todo-rosetta",
     "version": "1.0.0",
     "mappings": {
-        "montage": "../../../"
+        "montage": "../../../../"
     }
 }
